fix alignment of icons on Safari (#2484)
* fix alignment of icons on Safari

* fix - don't stretch flexbox items vertically

--- a/assets/css/_schedule-page-line-diagram.scss
+++ b/assets/css/_schedule-page-line-diagram.scss
@@ -114,6 +114,7 @@
 }
 
 .m-schedule-diagram__stop-details {
+  align-items: flex-start;
   display: flex;
   flex-wrap: wrap;
 }
@@ -124,10 +125,10 @@
 .m-schedule-diagram__connections {
   @include icon-size-inline($base-spacing);
 
-  a {
-    margin-right: calc(#{$base-spacing} / 4);
-    vertical-align: top;
-  }
+  display: inline-flex;
+  flex-wrap: wrap;
+  gap: calc(#{$base-spacing} / 4);
+  line-height: initial;
 
   .m-schedule-diagram__connection {
     vertical-align: middle;
